# image-extractor

./: README.md  pyproject.toml
tutorial/: step1_find_pixel_range.py  step2_inspect_image.py  step3_extract_image.py
