[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_extractor"
version = "0.1.0"
description = "Extract depth-labelled borehole images from PDF well log prints."
readme = "README.md"
license = { text = "Apache 2" }
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23",
    "Pillow>=10.0",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/your-org/logprint-digitiser"

[tool.setuptools.packages.find]
where = ["."]
include = ["image_extractor*"]
